@@ -2,6 +2,13 @@ CVS code -
 - nano.c:
   usage()
   	- Remove extra \n in --keypad description (Jordi).
+  main()
+	- Check that alt value is an alpha char before comparing to 
+	  val - 32, fixes Alt-R calling doprev instead of replace.
+- global.c:
+  shorcut_init()
+	- Replace hard coded ALT_G and ALT_H values in the replace
+	  and goto shortcuts with their macro counterparts NANO_ALT_*_KEY.	
 - winio.c:
   edit_refresh()
 	- Rename lines to nlines to fix AIX breakage (reported by
